aws-vpc-ec2-web/vpc.tf
resource "aws_vpc" "aman-vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "aman-vpc"
  }
}

resource "aws_subnet" "public-subnet" {
  vpc_id     = aws_vpc.aman-vpc.id
  cidr_block = "10.0.1.0/24"

  tags = {
    Name = "public-subnet"
  }
}
resource "aws_subnet" "private-subnet" {
  vpc_id     = aws_vpc.aman-vpc.id
  cidr_block = "10.0.2.0/24"

  tags = {
    Name = "private-subnet"
  }
}

resource "aws_internet_gateway" "aman-vpc-ig" {
  vpc_id = aws_vpc.aman-vpc.id

  tags = {
    Name = "aman-vpc-ig"
  }
}

resource "aws_route_table" "aman-vpc-rt" {
  vpc_id = aws_vpc.aman-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.aman-vpc-ig.id
  }

  tags = {
    Name = "aman-vpc-rt"
  }
}

resource "aws_route_table_association" "name" {
  subnet_id = aws_subnet.public-subnet.id
  route_table_id = aws_route_table.aman-vpc-rt.id
}
